// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> renders a modal has children 1`] = `
<Modal
  actions={
    Array [
      <Button
        flat={true}
        modal="close"
        node="button"
        waves="green"
      >
        Close
      </Button>,
    ]
  }
  bottomSheet={false}
  fixedFooter={false}
  header="Modal header"
  id="Modal-mockId"
  options={
    Object {
      "dismissible": true,
      "opacity": 0.4,
    }
  }
  trigger={
    <button>
      click
    </button>
  }
>
  <button
    onClick={[Function]}
  >
    click
  </button>
  <Portal
    containerInfo={
      <div>
        <div
          class="modal"
          id="Modal-mockId"
        >
          <div
            class="modal-content"
          >
            <h4>
              Modal header
            </h4>
            <div>
              <h1>
                Hello
              </h1>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="waves-effect waves-green btn-flat modal-close"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    }
  >
    <div
      className="modal"
      id="Modal-mockId"
    >
      <div
        className="modal-content"
      >
        <h4>
          Modal header
        </h4>
        <div>
          <h1>
            Hello
          </h1>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <Button
          flat={true}
          key=".0"
          modal="close"
          node="button"
          waves="green"
        >
          <button
            className="waves-effect waves-green btn-flat modal-close"
            disabled={false}
          >
            Close
          </button>
        </Button>
      </div>
    </div>
  </Portal>
</Modal>
`;

exports[`<Modal /> renders a trigger renders 1`] = `
<Modal
  actions={
    Array [
      <Button
        flat={true}
        modal="close"
        node="button"
        waves="green"
      >
        Close
      </Button>,
    ]
  }
  bottomSheet={false}
  fixedFooter={false}
  header="Modal header"
  id="Modal-mockId"
  options={
    Object {
      "dismissible": true,
      "opacity": 0.4,
    }
  }
  trigger={
    <button>
      click
    </button>
  }
>
  <button
    onClick={[Function]}
  >
    click
  </button>
  <Portal
    containerInfo={
      <div>
        <div
          class="modal"
          id="Modal-mockId"
        >
          <div
            class="modal-content"
          >
            <h4>
              Modal header
            </h4>
            <div>
              <h1>
                Hello
              </h1>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="waves-effect waves-green btn-flat modal-close"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    }
  >
    <div
      className="modal"
      id="Modal-mockId"
    >
      <div
        className="modal-content"
      >
        <h4>
          Modal header
        </h4>
        <div>
          <h1>
            Hello
          </h1>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <Button
          flat={true}
          key=".0"
          modal="close"
          node="button"
          waves="green"
        >
          <button
            className="waves-effect waves-green btn-flat modal-close"
            disabled={false}
          >
            Close
          </button>
        </Button>
      </div>
    </div>
  </Portal>
</Modal>
`;

exports[`<Modal /> without a trigger renders 1`] = `
<Modal
  actions={
    Array [
      <Button
        flat={true}
        modal="close"
        node="button"
        waves="green"
      >
        Close
      </Button>,
    ]
  }
  bottomSheet={false}
  fixedFooter={false}
  id="Modal-mockId"
  options={
    Object {
      "dismissible": true,
      "opacity": 0.4,
    }
  }
>
  <Portal
    containerInfo={
      <div>
        <div
          class="modal"
          id="Modal-mockId"
        >
          <div
            class="modal-content"
          >
            <h4 />
            <div>
              <h1>
                Hello
              </h1>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="waves-effect waves-green btn-flat modal-close"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    }
  >
    <div
      className="modal"
      id="Modal-mockId"
    >
      <div
        className="modal-content"
      >
        <h4 />
        <div>
          <h1>
            Hello
          </h1>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <Button
          flat={true}
          key=".0"
          modal="close"
          node="button"
          waves="green"
        >
          <button
            className="waves-effect waves-green btn-flat modal-close"
            disabled={false}
          >
            Close
          </button>
        </Button>
      </div>
    </div>
  </Portal>
</Modal>
`;
